# gigachat-rust

./: .gitignore  .harper-dictionary.txt  Cargo.toml  LICENSE  README.md  deny.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml  security.yml
data/: short.txt
examples/: batch.rs  embeddings.rs  function.rs  generate.rs
src/: error.rs  lib.rs  serialization.rs
src/batch/: builder.rs  error.rs  handler.rs  mod.rs  structures.rs
src/check/: builder.rs  error.rs  mod.rs  structures.rs
src/client/: credentials_provider.rs  error.rs  mod.rs
src/embeddings/: error.rs  mod.rs  structures.rs
src/function/: error.rs  mod.rs  structures.rs
src/generation/: builder.rs  error.rs  mod.rs  structures.rs
