[package]
name = "gigachat-rust"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Unofficial Rust SDK for Gigachat API"
license-file = "LICENSE"
authors = ["Patsakula Nikita <nikita.patsakula@gmail.com>"]
keywords = ["gigachat", "api", "rust", "llm", "client"]

[dependencies.reqwest-middleware]
features = ["json", "stream"]
git = "https://github.com/npatsakula/reqwest-middleware.git"
branch = "export_stream"
version = "0.4"

[dependencies]
async-trait = "0.1"
derive_more = { version = "2.0", features = ["from"] }
eventsource-stream = "0.2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
reqwest-auth = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = { version = "0.8", features = ["std"] }
time = { version = "0.3", features = ["serde"] }
token-source = { version = "1.0", features = ["async-token-source"] }
tokio = { version = "1.47", features = ["sync"] }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
display-error-chain = "0.2"
tokio = { version = "1.47", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io.reqwest-middleware]
git = "https://github.com/npatsakula/reqwest-middleware.git"
branch = "export_stream"
version = "0.4"
